<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_food"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:contentDescription="@string/img_foodDesc"
        android:paddingLeft="10dp"
        android:padding="5dp"
        app:srcCompat="@android:drawable/btn_star" />

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="290dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/txt_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/txt_title"
            android:textColor="@color/colorText2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_description"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
