<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageViewPostItem"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="@dimen/mainMarginLeft"
        android:layout_marginBottom="@dimen/mainMarginBottom"
        android:layout_marginTop="@dimen/mainMarginTop"
        android:paddingTop="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_launcher" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">
        <TableRow android:gravity="left"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textViewPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/mainMarginRight"
                android:gravity="left"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="@string/txtTitle"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_post_size"
                android:textStyle="bold"></TextView>
        </TableRow>
        <TableRow android:gravity="left"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textViewPostDesc"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/mainMarginRight"
                android:ellipsize="end"
                android:maxLines="3"
                android:scrollHorizontally="false"
                android:text="this is a very long text to test for the description"
                android:textSize="@dimen/text_desc_post_Size"></TextView>
        </TableRow>
        <TableRow android:gravity="left"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textViewPostDate"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/mainMarginRight"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="Posted on 3/5/2018"
                android:textSize="@dimen/text_desc_post_Size"></TextView>
        </TableRow>
        <TableRow android:gravity="left"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textViewPostUser"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/mainMarginRight"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:text="tanthinh"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/text_desc_post_Size"></TextView>

            <ImageView
                android:id="@+id/imgBtn_like_post_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imgBtn_likeDesc"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/thumb_up"></ImageView>

            <TextView
                android:id="@+id/txtView_likeCount_post_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/txtView_likeCount"
                android:layout_marginRight="8dp"></TextView>

            <ImageView
                android:id="@+id/imgBtn_dislike_post_item"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imgBtn_dislikeDesc"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/thumb_down"></ImageView>

            <TextView
                android:id="@+id/txtView_dislikeCount_post_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="7dp"
                android:text="@string/txtView_dislikeCount"
                android:layout_marginRight="8dp" ></TextView>
        </TableRow>
    </TableLayout>
</LinearLayout>
